--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,9 @@ services:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_DB=postgres
+      - POSTGRES_HOST_AUTH_METHOD=trust
     volumes:
-      - ./data/db:/var/lib/postgresql/data/
+      - bnb-data:/var/lib/postgresql/data/
 
   frontend:
     build:
@@ -36,3 +37,7 @@ services:
       - ./backend/api:/app/backend
     depends_on:
       - db
+
+volumes:
+  bnb-data:
+    external: true
